Some explanatory analysis on countries individual causes.2

--- a/TV_Analysis.ipynb
+++ b/TV_Analysis.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "bda92930",
+   "id": "43c3e389",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "cdbb26e5",
+   "id": "aefda5f4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "53a6d046",
+   "id": "ebcdf664",
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "70acbdaa",
+   "id": "f8e98d28",
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "b257c84a",
+   "id": "d517c11c",
    "metadata": {},
    "outputs": [
     {
@@ -502,7 +502,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "f1e9115a",
+   "id": "6d304f46",
    "metadata": {},
    "outputs": [
     {
@@ -718,7 +718,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "f7c084da",
+   "id": "0fd4fd5d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -728,7 +728,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "70875d51",
+   "id": "c1ac0136",
    "metadata": {},
    "outputs": [
     {
@@ -807,7 +807,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "dd421880",
+   "id": "657c0e4b",
    "metadata": {},
    "outputs": [
     {
@@ -830,7 +830,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "7f7a5d99",
+   "id": "b454df31",
    "metadata": {},
    "outputs": [
     {
@@ -915,7 +915,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "5fe8b016",
+   "id": "29f323a2",
    "metadata": {},
    "outputs": [
     {
@@ -945,10 +945,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "59a68a69",
+   "execution_count": 28,
+   "id": "f7789c2a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pop' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [28], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mpop\u001b[49m\u001b[38;5;241m.\u001b[39mdata\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'pop' is not defined"
+     ]
+    }
+   ],
    "source": [
     "pop.data"
    ]
